--- a/html/html/install/style/style.css
+++ b/html/html/install/style/style.css
@@ -1,3 +1,23 @@
+/* ----------------------------------------------------------------------
+   $Id: style.css,v 1.2 2003/03/28 02:08:09 r23 Exp $
+
+   OSIS WebPrinter for your Homepage
+   http://www.osisnet.de
+   
+   Ralf Zschemisch
+   http://www.r23.de/
+   
+   Copyright (c) 2003 r23
+   ----------------------------------------------------------------------
+   Based on:
+
+   POST-NUKE Content Management System
+   Copyright (C) 2001 by the Post-Nuke Development Team.
+   http://www.postnuke.com/
+   ----------------------------------------------------------------------
+   Released under the GNU General Public License
+   ---------------------------------------------------------------------- */
+
 BODY {
 BACKGROUND: #F6F7EB;
 COLOR: #000000;
