--- a/html/html/style/style.css
+++ b/html/html/style/style.css
@@ -1,13 +1,25 @@
-/*
-  $Id: style.css,v 1.1 2003/04/19 09:03:02 r23 Exp $
+/* ----------------------------------------------------------------------
+   $Id: style.css,v 1.2 2003/04/19 09:08:44 r23 Exp $
 
-  osCommerce, Open Source E-Commerce Solutions
-  http://www.oscommerce.com
+   OSIS WebPrinter for your Homepage
+   http://www.osisnet.de
+   
+   Ralf Zschemisch
+   http://www.r23.de/
+   
+   Copyright (c) 2003 r23
+   ----------------------------------------------------------------------
+   Based on:
+   
+   File: stylesheet.css,v 1.22 2002/03/16 00:20:11 hpdl
+   ----------------------------------------------------------------------
+   osCommerce, Open Source E-Commerce Solutions
+   http://www.oscommerce.com
 
-  Copyright (c) 2002 osCommerce
-
-  Released under the GNU General Public License
-*/
+   Copyright (c) 2002 osCommerce
+   ----------------------------------------------------------------------
+   Released under the GNU General Public License
+   ---------------------------------------------------------------------- */
 
 /* links */
 a:link { font-family: Verdana, Arial, sans-serif; font-size: 10px; color: #000000; font-weight: normal; text-decoration: none; }
