--- a/html/html/style/style.css
+++ b/html/html/style/style.css
@@ -1,5 +1,5 @@
 /* ----------------------------------------------------------------------
-   $Id: style.css,v 1.2 2003/04/19 09:08:44 r23 Exp $
+   $Id: style.css,v 1.3 2003/04/22 07:27:37 r23 Exp $
 
    OSIS WebPrinter for your Homepage
    http://www.osisnet.de
@@ -56,7 +56,6 @@ body { background-color: #ffffff; color: #000000; margin: 0px; }
 .headerBar { background-color: #B3BAC5; }
 .headerBarContent { font-family: Verdana, Arial, sans-serif; font-size: 10px; color: #ffffff; font-weight: bold; padding: 2px; }
 .columnLeft { background-color: #F0F1F1; border-color: #999999; border-width: 1px; border-style: solid; padding: 2px; }
-.pageHeading { font-family: Verdana, Arial, sans-serif; font-size: 18px; color: #727272; font-weight: bold; }
 
 /* data table */
 .dataTableHeadingRow { background-color: #C9C9C9; }
@@ -94,3 +93,144 @@ CHECKBOX, INPUT, RADIO, SELECT, TEXTAREA, FILE { font-family: Verdana, Arial, sa
 .smallText { font-family: Verdana, Arial, sans-serif; font-size: 10px; }
 .main { font-family: Verdana, Arial, sans-serif; font-size: 12px; }
 
+
+
+.owp-title {
+  COLOR: #000000;
+  FONT-SIZE: 18px;
+  FONT-WEIGHT: bold;
+  FONT-FAMILY: Verdana, Arial, sans-serif;
+  TEXT-DECORATION: none
+}
+
+.owp-logo {
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 3px;
+  text-decoration: none;
+}
+
+A.owp-logo:link {
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 3px;
+  text-decoration: none;
+}
+
+A.owp-logo:visited {
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 3px;
+  text-decoration: none;
+}
+
+A.owp-logo:hover {
+  background-color: #B1B78B;
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 3px;
+  text-decoration: none;
+}
+
+A.owp-logo:active {
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 16px;
+  font-weight: bold;
+  letter-spacing: 3px;
+  text-decoration: none;
+}
+
+.owp-title {
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.owp-title A:link {
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.owp-title A:visited {
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  text-decoration: underline;
+}
+
+.owp-title A:hover {
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.owp-title A:active {
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 12px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.owp-bigTitle {
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 3px;
+  text-decoration: none;
+}
+
+A.owp-bigTitle:link {
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 3px;
+  text-decoration: none;
+}
+
+A.owp-bigTitle:visited {
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 3px;
+  text-decoration: none;
+}
+
+A.owp-bigTitle:hover {
+  background-color: #B1B78B;
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 3px;
+  text-decoration: none;
+}
+
+A.owp-bigTitle:active {
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 18px;
+  font-weight: bold;
+  letter-spacing: 3px;
+  text-decoration: none;
+}
