--- a/html/html/style/style.css
+++ b/html/html/style/style.css
@@ -1,5 +1,5 @@
 /* ----------------------------------------------------------------------
-   $Id: style.css,v 1.3 2003/04/22 07:27:37 r23 Exp $
+   $Id: style.css,v 1.4 2003/04/25 07:21:50 r23 Exp $
 
    OSIS WebPrinter for your Homepage
    http://www.osisnet.de
@@ -95,59 +95,7 @@ CHECKBOX, INPUT, RADIO, SELECT, TEXTAREA, FILE { font-family: Verdana, Arial, sa
 
 
 
-.owp-title {
-  COLOR: #000000;
-  FONT-SIZE: 18px;
-  FONT-WEIGHT: bold;
-  FONT-FAMILY: Verdana, Arial, sans-serif;
-  TEXT-DECORATION: none
-}
 
-.owp-logo {
-  color: #000000;
-  font-family: Tahoma, Verdana, sans-serif;
-  font-size: 16px;
-  font-weight: bold;
-  letter-spacing: 3px;
-  text-decoration: none;
-}
-
-A.owp-logo:link {
-  color: #000000;
-  font-family: Tahoma, Verdana, sans-serif;
-  font-size: 16px;
-  font-weight: bold;
-  letter-spacing: 3px;
-  text-decoration: none;
-}
-
-A.owp-logo:visited {
-  color: #000000;
-  font-family: Tahoma, Verdana, sans-serif;
-  font-size: 16px;
-  font-weight: bold;
-  letter-spacing: 3px;
-  text-decoration: none;
-}
-
-A.owp-logo:hover {
-  background-color: #B1B78B;
-  color: #000000;
-  font-family: Tahoma, Verdana, sans-serif;
-  font-size: 16px;
-  font-weight: bold;
-  letter-spacing: 3px;
-  text-decoration: none;
-}
-
-A.owp-logo:active {
-  color: #000000;
-  font-family: Tahoma, Verdana, sans-serif;
-  font-size: 16px;
-  font-weight: bold;
-  letter-spacing: 3px;
-  text-decoration: none;
-}
 
 .owp-title {
   color: #000000;
@@ -162,7 +110,7 @@ A.owp-logo:active {
   font-family: Tahoma, Verdana, sans-serif;
   font-size: 12px;
   font-weight: bold;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .owp-title A:visited {
@@ -170,7 +118,7 @@ A.owp-logo:active {
   font-family: Tahoma, Verdana, sans-serif;
   font-size: 12px;
   font-weight: bold;
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .owp-title A:hover {
@@ -194,43 +142,86 @@ A.owp-logo:active {
   font-family: Tahoma, Verdana, sans-serif;
   font-size: 18px;
   font-weight: bold;
-  letter-spacing: 3px;
   text-decoration: none;
 }
 
-A.owp-bigTitle:link {
+.owp-bigTitle A:link {
   color: #000000;
   font-family: Tahoma, Verdana, sans-serif;
   font-size: 18px;
   font-weight: bold;
-  letter-spacing: 3px;
   text-decoration: none;
 }
 
-A.owp-bigTitle:visited {
+.owp-bigTitle A:visited {
   color: #000000;
   font-family: Tahoma, Verdana, sans-serif;
   font-size: 18px;
   font-weight: bold;
-  letter-spacing: 3px;
   text-decoration: none;
 }
 
-A.owp-bigTitle:hover {
-  background-color: #B1B78B;
+.owp-bigTitle A:hover {
   color: #000000;
   font-family: Tahoma, Verdana, sans-serif;
   font-size: 18px;
   font-weight: bold;
-  letter-spacing: 3px;
   text-decoration: none;
 }
 
-A.owp-bigTitle:active {
+.owp-bigTitle A:active {
   color: #000000;
   font-family: Tahoma, Verdana, sans-serif;
   font-size: 18px;
   font-weight: bold;
-  letter-spacing: 3px;
   text-decoration: none;
+}
+
+.owp-date {
+  color: #000000;
+  font-family: Tahoma, Verdana, sans-serif;
+  font-size: 10px;
+  font-weight: bold;
+  text-decoration: none;
+}
+
+.owp-sub {
+color: #000000;
+font-family: Tahoma, Verdana, sans-serif;
+font-size: 11px;
+font-weight: normal;
+text-decoration: none;
+}
+
+.owp-sub A:link {
+color: #000000;
+font-family: Tahoma, Verdana, sans-serif;
+font-size: 11px;
+font-style: normal;
+text-decoration: underline;
+}
+
+.owp-sub A:visited {
+color: #000000;
+font-family: Tahoma, Verdana, sans-serif;
+font-size: 11px;
+font-style: normal;
+text-decoration: underline;
+}
+
+.owp-sub A:hover {
+background-color: #FFFFFF;
+color: #000000;
+font-family: Tahoma, Verdana, sans-serif;
+font-size: 11px;
+font-style: normal;
+text-decoration: none;
+}
+
+.owp-sub A:active {
+color: #FF0000;
+font-family: Tahoma, Verdana, sans-serif;
+font-size: 11px;
+font-style: normal;
+text-decoration: underline;
 }
